# POO

./: Enunciado_M3_01_POO.ipynb  catapulta.py
catapulta-game/: README.md  main.py  pyproject.toml
catapulta-game/catapulta/: __init__.py  catapulta.py  enemigos.py  interfaz.py  materiales.py  proyectil.py  utils.py
catapulta-game/tests/: __init__.py  test_catapulta.py
catapulta-project/: README.md  main.py  requirements.txt  setup.py
catapulta-project/catapulta/: __init__.py  base.py  catapult.py  enemy.py  materials.py  simulator.py  utils.py
catapulta-project/tests/: __init__.py  test_catapult.py
