[tool.poetry]
name = "catapulta-game"
version = "0.1.0"
description = "Un juego de catapultas donde los usuarios pueden construir su propia catapulta y eliminar enemigos."
authors = ["Tu Nombre <tu.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"